# resume

./: Cargo.toml  Makefile  README.md  Trunk.toml  index.html  rust-analyzer.toml
public/: styles.css
public/js/: index.js
src/: app.rs  consts.rs  main.rs
src/components/: mod.rs  tag.rs  title.rs
src/pages/home/: mod.rs
src/pages/home/components/: dark_mode.rs  download.rs  mod.rs  person_info.rs  project_card.rs  project_info.rs
